# JavaLlama

./: .gitignore  CMakeLists.txt  Makefile  README.md  pom.xml  settings.xml  setup-llama.sh
.github/: build_cuda_linux.sh  build_cuda_linux_new.sh
.github/workflows/: maven-publish.yml
lib/cmake/llama/: llama-config.cmake  llama-version.cmake
src/main/cpp/: CMakeLists.txt  build_info.h.in  jllama.cpp  jllama.h  server.hpp  utils.hpp
src/main/java/io/github/innobridge/llama/: Application.java  InferenceParameters.java  JsonParameters.java  LlamaException.java  LlamaIterable.java  LlamaIterator.java  LlamaLoader.java  LlamaModel.java  LlamaOutput.java  LogLevel.java  ModelParameters.java  OSInfo.java  ProcessRunner.java
src/main/java/io/github/innobridge/llama/args/: GpuSplitMode.java  LogFormat.java  MiroStat.java  NumaStrategy.java  PoolingType.java  RopeScalingType.java  Sampler.java
src/main/java/io/github/innobridge/llama/client/: InferenceParameters.java  JsonParameters.java  LLMClient.java  LlamaClient.java  LlamaException.java  LlamaIterable.java  LlamaIterator.java  LlamaLoader.java  LlamaModel.java  LlamaOutput.java  LogLevel.java  ModelParameters.java  OSInfo.java  ProcessRunner.java
src/main/java/io/github/innobridge/llama/client/args/: GpuSplitMode.java  LogFormat.java  MiroStat.java  NumaStrategy.java  PoolingType.java  RopeScalingType.java  Sampler.java
src/main/java/io/github/innobridge/llama/configuration/: ApplicationSpecificSpringComponentScanMarker.java  LLMConfiguration.java  ModelConfiguration.java  OpenApiConfig.java  WebSocketConfiguration.java
src/main/java/io/github/innobridge/llama/controller/: ApplicationSpecificSpringComponentScanMarker.java  LlamaController.java
src/main/java/io/github/innobridge/llama/model/: CompletionInput.java  GenerationCallback.java  InferenceInput.java
src/main/java/io/github/innobridge/llama/util/: NativeLibraryLoader.java  OSInfo.java
src/main/java/io/github/innobridge/llama/websocket/: LlamaWebSocketHandler.java
src/main/resources/: application.properties
src/main/resources/io/github/innobridge/llama/Mac/aarch64/: libggml.dylib  libllama.dylib
src/test/java/io/github/innobridge/llama/: ApplicationTests.java
